--- a/34_Animated_Countdown/style.css
+++ b/34_Animated_Countdown/style.css
@@ -40,6 +40,15 @@ h4 {
   left: 50%;
   -webkit-transform: translate(-50%, -50%) scale(0);
           transform: translate(-50%, -50%) scale(0);
+  text-align: center;
+}
+
+.final h1 {
+  margin-bottom: 20px;
+}
+
+.final button {
+  cursor: pointer;
 }
 
 .final.show {
