--- a/34_Animated_Countdown/style.scss
+++ b/34_Animated_Countdown/style.scss
@@ -36,6 +36,15 @@ h4 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0);
+  text-align: center;
+
+  h1 {
+    margin-bottom: 20px;
+  }
+
+  button {
+    cursor: pointer;
+  }
 
   &.show {
     transform: translate(-50%, -50%) scale(1);
